Fixed IE6 comment width overspill issue.

--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ blockquote {
 }
 
 .avatar {
+    width: 48px;
     float: right;
 }
 
